--- a/InClassAssignment.ipynb
+++ b/InClassAssignment.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMjD5ARf+DvzPOb2O6phIM3",
+      "authorship_tag": "ABX9TyNbuU0KHoqGGPeSfTy2kvjp",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -23,12 +23,12 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/sofpiniella/In-Class-Assignment-1-Sofia/blob/main/InClassAssignment.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/sofpiniella/In-Class-Assignment-Sofia/blob/main/InClassAssignment.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -53,6 +53,51 @@
         "pi = 3.14\n",
         "area = (2 * pi * radius ** 2) + (2 * pi * radius * height)\n",
         "print(f\"The area of the cylinder is: {area} sq. ft\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "number_1 = float(input(\"Enter a number: \"))\n",
+        "number_2 = float(input(\"Enter another number: \"))\n",
+        "symbol = input(\"Enter a symbol: \")\n",
+        "if symbol == \"+\":\n",
+        "  print(f\"{number_1} {symbol} {number_2} = {number_1 + number_2}\")\n",
+        "elif symbol == \"-\":\n",
+        "  print(f\"{number_1} {symbol} {number_2} = {number_1 - number_2}\")\n",
+        "elif symbol == \"*\":\n",
+        "  print(f\"{number_1} {symbol} {number_2} = {number_1 * number_2}\")\n",
+        "elif symbol == \"/\":\n",
+        "  print(f\"{number_1} {symbol} {number_2} = {number_1 / number_2}\")\n",
+        "elif symbol == \"%\":\n",
+        "  print(f\"{number_1} {symbol} {number_2} = {number_1 % number_2}\")\n",
+        "elif symbol == \"**\":\n",
+        "  print(f\"{number_1} {symbol} {number_2} = {number_1 ** number_2}\")\n",
+        "elif symbol == \"//\":\n",
+        "  print(f\"{number_1} {symbol} {number_2} = {number_1 // number_2}\")\n",
+        "else:\n",
+        "  print(\"Invalid symbol\")\n",
+        "\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Np8qiW50sUKk",
+        "outputId": "4437e598-7db5-4132-fd62-4ae88f868b7e"
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter a number: 1\n",
+            "Enter another number: 2\n",
+            "Enter a symbol: +\n",
+            "1.0 + 2.0 = 3.0\n"
+          ]
+        }
       ]
     }
   ]
