--- a/InClassAssignment.ipynb
+++ b/InClassAssignment.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPMMnKSNr+Y7h+dqao1WjP4",
+      "authorship_tag": "ABX9TyNIx40t8WXvpDtPc9JxO9LB",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -25,6 +25,15 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/sofpiniella/In-Class-Assignment-Sofia/blob/main/InClassAssignment.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Cylinder area calculator"
+      ],
+      "metadata": {
+        "id": "-QTGVYJL7Riy"
+      }
     },
     {
       "cell_type": "code",
@@ -54,6 +63,15 @@
         "area = (2 * pi * radius ** 2) + (2 * pi * radius * height)\n",
         "print(f\"The area of the cylinder is: {area} sq. ft\")"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Numerical calculator"
+      ],
+      "metadata": {
+        "id": "qHEvpVby7Wdy"
+      }
     },
     {
       "cell_type": "code",
@@ -133,7 +151,7 @@
         "id": "B4GY8eExJuo-",
         "outputId": "c6d281c7-ff05-4297-927e-c6cab9571714"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -182,7 +200,7 @@
         "id": "RI0BpprpN5cO",
         "outputId": "31e2631f-7ab4-471c-859b-06870cc136a9"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
