--- a/InClassAssignment.ipynb
+++ b/InClassAssignment.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNIx40t8WXvpDtPc9JxO9LB",
+      "authorship_tag": "ABX9TyOt5zX/6aD+Zr2+DRvJ6KnC",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -219,6 +219,129 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Rock - Paper - Scissors"
+      ],
+      "metadata": {
+        "id": "QXWfUEAa5P4H"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "play = input(\"Do you want to play a game? (yes/no) \")\n",
+        "\n",
+        "while play == \"yes\":\n",
+        "  player_1 = input(\"Player 1, please enter your name: \")\n",
+        "  player_2 = input(\"Player 2, please enter your name: \")\n",
+        "  p1 = input(player_1 + \", please enter rock, paper, or scissors: \")\n",
+        "  p2 = input(player_2 + \", please enter rock, paper, or scissors: \")\n",
+        "\n",
+        "  if p1 == p2:\n",
+        "    print(\"It's a tie!\")\n",
+        "  elif ((p1 == \"rock\" and p2 == \"scissors\")\n",
+        "  or (p1 == \"paper\" and p2 == \"rock\")\n",
+        "  or (p1 == \"scissors\" and p2 == \"paper\")):\n",
+        "    print(player_1, \"wins!\")\n",
+        "  else:\n",
+        "    print(player_2, \"wins!\")\n",
+        "\n",
+        "  play = input(\"Do you want to play again? (yes/no)\")\n",
+        "\n",
+        "print(\"Thanks for playing!\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Ub0RFoij9B5b",
+        "outputId": "83bea523-2194-4924-aa2d-6dd598e012d5"
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Do you want to play a game? (yes/no) yes\n",
+            "Player 1, please enter your name: s\n",
+            "Player 2, please enter your name: v\n",
+            "s, please enter rock, paper, or scissors: rock\n",
+            "v, please enter rock, paper, or scissors: scissors\n",
+            "s wins!\n",
+            "Do you want to play again? (yes/no)no\n",
+            "Thanks for playing!\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Rock - Paper - Scissors: Play against computer."
+      ],
+      "metadata": {
+        "id": "tSnMhpALC1az"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import random\n",
+        "play = input(\"Do you want to play a game? (yes/no) \")\n",
+        "\n",
+        "while play == \"yes\":\n",
+        "\n",
+        "  p1 = input(\"Please enter rock, paper, or scissors: \")\n",
+        "  p2 = random.choice([\"rock\", \"paper\", \"scissors\"]).capitalize()\n",
+        "\n",
+        "  print(f'Player chose {p1}; The computer chose {p2}.')\n",
+        "\n",
+        "  if p1 == p2:\n",
+        "    print(\"It's a tie!\")\n",
+        "  elif ((p1 == \"rock\" and p2 == \"scissors\")\n",
+        "  or (p1 == \"paper\" and p2 == \"rock\")\n",
+        "  or (p1 == \"scissors\" and p2 == \"paper\")):\n",
+        "    print(\"Player wins!\")\n",
+        "  else:\n",
+        "    print(\"Computer wins!\")\n",
+        "\n",
+        "  play = input(\"Do you want to play again? (yes/no) \")\n",
+        "\n",
+        "print(\"Thanks for playing!\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "IupMiJ_9CDMg",
+        "outputId": "8cb1e32f-b4ff-40c8-c80b-0d2e6fa85865"
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Do you want to play a game? (yes/no) yes\n",
+            "Please enter rock, paper, or scissors: rock\n",
+            "Player chose rock; The computer chose Paper\n",
+            "Computer wins!\n",
+            "Do you want to play again? (yes/no)no\n",
+            "Thanks for playing!\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "Yy1IzeyoBBIA"
+      }
     }
   ]
 }
