--- a/InClassAssignment.ipynb
+++ b/InClassAssignment.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOt5zX/6aD+Zr2+DRvJ6KnC",
+      "authorship_tag": "ABX9TyOxXcQJvuG2vFAYxb7CELEt",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -260,7 +260,7 @@
         "id": "Ub0RFoij9B5b",
         "outputId": "83bea523-2194-4924-aa2d-6dd598e012d5"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -320,7 +320,7 @@
         "id": "IupMiJ_9CDMg",
         "outputId": "8cb1e32f-b4ff-40c8-c80b-0d2e6fa85865"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -338,10 +338,47 @@
     },
     {
       "cell_type": "markdown",
-      "source": [],
+      "source": [
+        "List"
+      ],
       "metadata": {
         "id": "Yy1IzeyoBBIA"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "list = []\n",
+        "number = float(input(\"Please enter a number, to stop enter 0. \"))\n",
+        "\n",
+        "while number != 0.0:\n",
+        "  list.append(number)\n",
+        "  number = float(input(\"Please enter a number, to stop enter 0. \"))\n",
+        "list.sort(reverse=True)\n",
+        "print(list)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "TaRSJ_dfQBBP",
+        "outputId": "fe6359ae-511a-412e-e948-53ba16be383b"
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Please enter a number, to stop enter 0. 1\n",
+            "Please enter a number, to stop enter 0. 2\n",
+            "Please enter a number, to stop enter 0. 3\n",
+            "Please enter a number, to stop enter 0. 4\n",
+            "Please enter a number, to stop enter 0. 0\n",
+            "[4.0, 3.0, 2.0, 1.0]\n"
+          ]
+        }
+      ]
     }
   ]
 }
