--- a/InClassAssignment.ipynb
+++ b/InClassAssignment.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOxXcQJvuG2vFAYxb7CELEt",
+      "authorship_tag": "ABX9TyP13jxIZcTF61i6EbPysIpm",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -364,7 +364,7 @@
         "id": "TaRSJ_dfQBBP",
         "outputId": "fe6359ae-511a-412e-e948-53ba16be383b"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -377,6 +377,155 @@
             "Please enter a number, to stop enter 0. 0\n",
             "[4.0, 3.0, 2.0, 1.0]\n"
           ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Dictionary List"
+      ],
+      "metadata": {
+        "id": "mvbAvJNV3DFO"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "months = {}\n",
+        "\n",
+        "names = [\"Jan\", \"Feb\", \"Mar\", \"Apr\", \"May\", \"Jun\", \"Jul\", \"Aug\", \"Sep\", \"Oct\", \"Nov\", \"Dec\"]\n",
+        "numbers = [1,2,3,4,5,6,7,8,9,10,11,12]\n",
+        "\n",
+        "for idx in range(len(names)):\n",
+        "  months[numbers[idx]] = names[idx]\n",
+        "months\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "9EPqF_Wgx95d",
+        "outputId": "c9ce9182-d62b-4bf8-9042-e7366d59ee70"
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{1: 'Jan',\n",
+              " 2: 'Feb',\n",
+              " 3: 'Mar',\n",
+              " 4: 'Apr',\n",
+              " 5: 'May',\n",
+              " 6: 'Jun',\n",
+              " 7: 'Jul',\n",
+              " 8: 'Aug',\n",
+              " 9: 'Sep',\n",
+              " 10: 'Oct',\n",
+              " 11: 'Nov',\n",
+              " 12: 'Dec'}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 3
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "months = {}\n",
+        "\n",
+        "names = [\"Jan\", \"Feb\", \"Mar\", \"Apr\", \"May\", \"Jun\", \"Jul\", \"Aug\", \"Sep\", \"Oct\", \"Nov\", \"Dec\"]\n",
+        "numbers = [1,2,3,4,5,6,7,8,9,10,11,12]\n",
+        "\n",
+        "for num in numbers:\n",
+        "  months[num] = names[num - 1]\n",
+        "months"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "NVAu3BoyyAnq",
+        "outputId": "d86c067e-e192-433c-cecb-1116c4c943bd"
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{1: 'Jan',\n",
+              " 2: 'Feb',\n",
+              " 3: 'Mar',\n",
+              " 4: 'Apr',\n",
+              " 5: 'May',\n",
+              " 6: 'Jun',\n",
+              " 7: 'Jul',\n",
+              " 8: 'Aug',\n",
+              " 9: 'Sep',\n",
+              " 10: 'Oct',\n",
+              " 11: 'Nov',\n",
+              " 12: 'Dec'}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 5
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "counts = {}\n",
+        "\n",
+        "while len(counts) < 5:\n",
+        "\n",
+        "  key = input(\"Enter a word: \")\n",
+        "\n",
+        "  if key not in counts:\n",
+        "    counts[key] = 1\n",
+        "  else:\n",
+        "    counts[key] += 1\n",
+        "\n",
+        "counts"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "B5mf2lfL4wbi",
+        "outputId": "921babee-1938-4953-b6df-ebe2876bd376"
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Enter a word: a\n",
+            "Enter a word: b\n",
+            "Enter a word: c\n",
+            "Enter a word: e\n",
+            "Enter a word: a\n",
+            "Enter a word: a\n",
+            "Enter a word: a\n",
+            "Enter a word: a\n",
+            "Enter a word: d\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'a': 5, 'b': 1, 'c': 1, 'e': 1, 'd': 1}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 11
         }
       ]
     }
