--- a/InClassAssignment.ipynb
+++ b/InClassAssignment.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP13jxIZcTF61i6EbPysIpm",
+      "authorship_tag": "ABX9TyN3ACwEhXX0YF6O/pfj2b2c",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -408,7 +408,7 @@
         "id": "9EPqF_Wgx95d",
         "outputId": "c9ce9182-d62b-4bf8-9042-e7366d59ee70"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -452,7 +452,7 @@
         "id": "NVAu3BoyyAnq",
         "outputId": "d86c067e-e192-433c-cecb-1116c4c943bd"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -500,7 +500,7 @@
         "id": "B5mf2lfL4wbi",
         "outputId": "921babee-1938-4953-b6df-ebe2876bd376"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "name": "stdout",
@@ -526,6 +526,53 @@
           },
           "metadata": {},
           "execution_count": 11
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Parking Garage"
+      ],
+      "metadata": {
+        "id": "6YkM_gJUNt4Q"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def calcFee(hours):\n",
+        "  print (f'Number of hours parked: {hours}')\n",
+        "  for hours in range(1,9):\n",
+        "    fee = 5 + (2.5 * hours)\n",
+        "  if fee < 10:\n",
+        "    fee = 10.0\n",
+        "  elif fee >= 20:\n",
+        "    fee = 20.0\n",
+        "  print(f'Total fee: {fee}$')\n",
+        "\n",
+        "print('Program starts...')\n",
+        "numHours = int(input('Enter number of hours parked: '))\n",
+        "calcFee(numHours)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "EqKCT7CBNqqm",
+        "outputId": "1c70463d-9b1d-41c0-ce9d-c7bbc8517266"
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Program starts...\n",
+            "Enter number of hours parked: 4\n",
+            "Number of hours parked: 4\n",
+            "Total fee: 20.0$\n"
+          ]
         }
       ]
     }
