--- a/InClassAssignment.ipynb
+++ b/InClassAssignment.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN3ACwEhXX0YF6O/pfj2b2c",
+      "authorship_tag": "ABX9TyNm+6icl78CmulWxWokhWXZ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -562,7 +562,7 @@
         "id": "EqKCT7CBNqqm",
         "outputId": "1c70463d-9b1d-41c0-ce9d-c7bbc8517266"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -573,6 +573,76 @@
             "Number of hours parked: 4\n",
             "Total fee: 20.0$\n"
           ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#f ('abc') -> cba\n",
+        "def fibR (n):\n",
+        "  if n > 1: #inductive case\n",
+        "    return fibR(n-1) +fibR(n-2)\n",
+        "  else:\n",
+        "      return 1\n",
+        "\n",
+        "fibR(5)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "fTEXNX9rNDJg",
+        "outputId": "5263688a-f5f4-4f1d-b2c8-0db472bb1cee"
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "8"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 1
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def reverse(s):\n",
+        "  if len(s) ==1:\n",
+        "    return s\n",
+        "  else:\n",
+        "    #return s[-1] + reverse (s[:-1])\n",
+        "    #return s[-1] + reverse(s[1:-1]) + s[0]\n",
+        "    return reverse(s[1:]) + s[0]\n",
+        "reverse(\"Hello\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "id": "7hOQdE9sNHLD",
+        "outputId": "24497ec1-b8a4-43f2-f483-971823688256"
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'olleH'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 2
         }
       ]
     }
