--- a/InClassAssignment.ipynb
+++ b/InClassAssignment.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNm+6icl78CmulWxWokhWXZ",
+      "authorship_tag": "ABX9TyOZ6kMke80OKgXXcMsdkYcX",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -589,13 +589,13 @@
         "fibR(5)"
       ],
       "metadata": {
+        "id": "fTEXNX9rNDJg",
+        "outputId": "5263688a-f5f4-4f1d-b2c8-0db472bb1cee",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        },
-        "id": "fTEXNX9rNDJg",
-        "outputId": "5263688a-f5f4-4f1d-b2c8-0db472bb1cee"
+        }
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -622,14 +622,14 @@
         "reverse(\"Hello\")"
       ],
       "metadata": {
+        "id": "7hOQdE9sNHLD",
+        "outputId": "24497ec1-b8a4-43f2-f483-971823688256",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        },
-        "id": "7hOQdE9sNHLD",
-        "outputId": "24497ec1-b8a4-43f2-f483-971823688256"
+        }
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -645,6 +645,47 @@
           "execution_count": 2
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class Greeting:\n",
+        " def __init__(self,first,last):\n",
+        "  self.first = first\n",
+        "  self.last = last\n",
+        " def display(self):\n",
+        "  print(f' Hi {self.first}')\n",
+        "\n",
+        "greeting = Greeting('Donald', 'Becker')\n",
+        "greeting.display()\n",
+        "\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "6-UIj6UJYCWl",
+        "outputId": "1a186bfe-7b22-4d94-ae76-5fc4342339fb"
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            " Hi Donald\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "wJFCK1HlYrRy"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
