--- a/InClassAssignment.ipynb
+++ b/InClassAssignment.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOZ6kMke80OKgXXcMsdkYcX",
+      "authorship_tag": "ABX9TyOxoalWF9Vfu5Gdft+KOiS5",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -339,7 +339,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "List"
+        " Append List"
       ],
       "metadata": {
         "id": "Yy1IzeyoBBIA"
@@ -478,6 +478,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Dynamic dictionary; 5 distinct key:value pairs"
+      ],
+      "metadata": {
+        "id": "hdZu5ohygapB"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "counts = {}\n",
@@ -532,7 +541,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Parking Garage"
+        "Parking Garage - calcFee"
       ],
       "metadata": {
         "id": "6YkM_gJUNt4Q"
@@ -610,6 +619,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Recursive function: string reversal"
+      ],
+      "metadata": {
+        "id": "NJdkVY0hgtNm"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "def reverse(s):\n",
@@ -647,6 +665,67 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Parking garage/1st question of Assignment II using exception handling"
+      ],
+      "metadata": {
+        "id": "-P45GOGzh6cn"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def calcFee(hours):\n",
+        "  fee = 5 + 2.5 * (hours)\n",
+        "  if fee < 10.0:\n",
+        "    fee = 10.0\n",
+        "  elif fee >= 20.0:\n",
+        "    fee = 20.0\n",
+        "  print(f'Fee: {fee}$')\n",
+        "\n",
+        "def main():\n",
+        "  try:\n",
+        "    numHours = int(input('Enter number of hours: '))\n",
+        "    calcFee(numHours)\n",
+        "  except ValueError:\n",
+        "    print('Cannot cast to int().')\n",
+        "  except:\n",
+        "    print('Unknown error...')\n",
+        "\n",
+        "\n",
+        "if __name__ == '__main__':\n",
+        "  main()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "WgQ8sYQKh5E0",
+        "outputId": "68b076a9-a988-49ac-bb61-515417c36888"
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter number of hours: 3\n",
+            "Fee: 12.5$\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Greeting class"
+      ],
+      "metadata": {
+        "id": "bHzZD1vHg1ZC"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "class Greeting:\n",
@@ -667,7 +746,7 @@
         "id": "6-UIj6UJYCWl",
         "outputId": "1a186bfe-7b22-4d94-ae76-5fc4342339fb"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -680,12 +759,183 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "class Greeting:\n",
+        "  def __init__(self, first, last):\n",
+        "    self.first = first\n",
+        "    self.last = last\n",
+        "\n",
+        "  def display(self, formal=False):\n",
+        "    if formal:\n",
+        "      print(f'Hello, {self.first} {self.last}')\n",
+        "    else:\n",
+        "      print(f'Hi {self.first}')\n",
+        "  def __str__(self):\n",
+        "    return str(self.first) + \", \" + str(self.last)\n",
+        "    return \"{}, {}\".format(self.first, self.last)\n",
+        "    return f'{self.first}, {self.last}'\n",
+        "\n",
+        "greeting = Greeting('Donald', 'Becker')\n",
+        "other_greeting = Greeting('Bob', 'Dylan')\n",
+        "greeting.display()\n",
+        "print(greeting)\n",
+        "print(other_greeting)"
+      ],
       "metadata": {
-        "id": "wJFCK1HlYrRy"
+        "id": "wJFCK1HlYrRy",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "24c60873-1916-46b4-ee4e-53643811e5f1"
       },
-      "execution_count": null,
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Hi Donald\n",
+            "Donald, Becker\n",
+            "Bob, Dylan\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Student Class"
+      ],
+      "metadata": {
+        "id": "tIHTiFrDhcm8"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class Student:\n",
+        "    def __init__(self, name, number):\n",
+        "        self.name = name\n",
+        "        self.number = number\n",
+        "        self.courses = []\n",
+        "    def enroll(self, course):\n",
+        "        if course in self.courses:\n",
+        "            print(f'You have already enrolled in{course}')\n",
+        "        else:\n",
+        "            self.courses.append(course)\n",
+        "    def get_courses(self):\n",
+        "        return self.courses"
+      ],
+      "metadata": {
+        "id": "slQakTd-heW6"
+      },
+      "execution_count": 2,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "s1 = Student('Bob', 100)\n",
+        "s2 = Student('Alice', 101)\n",
+        "\n",
+        "print (s1.name, s1.number)\n",
+        "print (s2.name, s2.number)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "r7Ozq4SvhsYF",
+        "outputId": "fa5bcb81-6b84-4d0e-ce56-dc871f128200"
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Bob 100\n",
+            "Alice 101\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Classes Point and Rectangle"
+      ],
+      "metadata": {
+        "id": "EZT6F9nkiGNe"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import math\n",
+        "\n",
+        "class Point:\n",
+        "  def __init__(self, x, y):\n",
+        "    self.x = x\n",
+        "    self.y = y\n",
+        "  def distance(self, other):\n",
+        "    return math.sqrt((self.x - other.x)**2 + (self.y - other.y)**2)"
+      ],
+      "metadata": {
+        "id": "QIrFlp-biBHs"
+      },
+      "execution_count": 7,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class Rectangle:\n",
+        "  def __init__(self):\n",
+        "    self.c1 = Point(0, 0)\n",
+        "    self.c2 = Point(0, 2)\n",
+        "    self.c3 = Point(2, 0)\n",
+        "    self.c4 = Point(2, 2)\n",
+        "    self.width = self.calculate_width()\n",
+        "    self.length = self.calculate_length()\n",
+        "\n",
+        "  def calculate_width(self):\n",
+        "    return self.c1.distance(self.c2)\n",
+        "\n",
+        "  def calculate_length(self):\n",
+        "    return self.c1.distance(self.c3)\n",
+        "\n",
+        "  def area(self):\n",
+        "    return f'Area = {self.width * self.length} sq. ft'\n",
+        "\n",
+        "\n",
+        "square = Rectangle()\n",
+        "square.area()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "id": "0ng_T14GiCXY",
+        "outputId": "1374c37c-79de-4dfd-bfc8-1fee239b8e2a"
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'Area = 4.0 sq. ft'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 6
+        }
+      ]
     }
   ]
 }
